modules/gdscript/tests/scripts/analyzer/errors/use_value_of_void_function_custom_method.gd
func foo() -> void:
	pass

func test():
	print(foo()) # Custom method.
